重构了一下符号表